*** HEAD CONTENT *****************************************************************
**********************************************************************************

  What's new in this drop
  ================================================================================

  PRs Fixed in this Release
  ================================================================================
  5362 Deeper than necessary JavaElementDelta when package added  

  PRs Closed in this Release
  ================================================================================


**********************************************************************************
*** BUILD 20011109 (2.0 STREAM, v_210) *******************************************
**********************************************************************************

  What's new in this drop
  ================================================================================
  * Project references are maintained by the JavaCore, in parallel with build path.
  * Resurrected deprecated APIs from 0.9 which were discarded previously.
  * ICodeCompletion reverted to 1.0 version, and got deprecated. Use ICompletionRequestor instead.
  * Cross-project incremental recompilation in presence of structural changes in produced binaries.
  
  27 PRs Fixed in this Release
  ================================================================================
  5525      ICodeCompletionRequestor isn't 1.0 compatible   
  5616      NPE when compiling invalid code defining a array of strings  
  5217      java search scope: missing enclosing project  
  5527      Unexpected inaccurate matches for #close() declarations  
  5522      Type hierarchy - missing subtypes of JavaElement  
  5508      JDT cannot support periods in the folders above the package name
  5541      No refresh when adding a compilation unit inside a dot named source folder 
  5532      Incremental compile missed a return type change