@@ -4,7 +4,7 @@
    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    <meta name="Author" content="IBM">
    <meta name="GENERATOR" content="Mozilla/4.73 [en] (Windows NT 5.0; U) [Netscape]">
-   <title>Java Tooling Release Notes</title>
+   <title>JDT/Core Release Notes</title>
 </head>
 <body>
 
@@ -35,7 +35,8 @@ in produced binaries.</li>
 
 <h3>
 Problem Reports Fixed</h3>
-<a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=5525">5525</a>: ICodeCompletionRequestor
+<a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=5362">5362</a>: Deeper than necessary JavaElementDelta when package added
+<br><a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=5525">5525</a>: ICodeCompletionRequestor
 isn't 1.0 compatible
 <br><a href="http://dev.eclipse.org/bugs/show_bug.cgi?id=5616">5616</a>:
 NPE when compiling invalid code defining a array of strings
